--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Boolando</title>
 </head>
-<body>
+<body class="debug">
     <header>
         <div>
-            
+            <img src="./assets/boolando_images/img/boolean-logo.png" alt="">
         </div>
 
 
