Add navigation bar and logo to index.html; update styles in style.css

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 </head>
 <body class="debug">
     <header>
-        <div>
-            <img src="./assets/boolando_images/img/boolean-logo.png" alt="">
-        </div>
+        <nav class="nav-bar">
+
+            <div>
+                <a href="">Donna </a>
+                <a href="">Uomo</a>
+                <a href="">Bambino</a>
+            </div>
+            <div>
+                <img class="logo" src="./assets/boolando_images/img/boolean-logo.png" alt="">
+            </div>
+          
+        </nav>
 
 
 
