Update navigation bar styles

--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <header>
         <nav class="nav-bar">
 
-            <div>
+            <div class="">
                 <a href="">Donna </a>
                 <a href="">Uomo</a>
                 <a href="">Bambino</a>
             </div>
             <div>
                 <img class="logo" src="./assets/boolando_images/img/boolean-logo.png" alt="">
+            </div>
+            <div>
+                
             </div>
           
         </nav>
