Add top-right icons to navigation and update styles

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
             <div>
                 <img class="logo" src="./assets/boolando_images/img/boolean-logo.png" alt="">
             </div>
-            <div>
-                
+            <div class="icon-top-right">
+                <i class="fa-solid fa-bag-shopping"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-regular fa-user"></i>
             </div>
           
         </nav>
