Add top-left navigation links with styling and font

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="nav-bar">
 
-            <div class="">
+            <div class="top-left">
                 <a href="">Donna </a>
                 <a href="">Uomo</a>
                 <a href="">Bambino</a>
