Update navigation bar styles and background color; fix class name in body

--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Boolando</title>
 </head>
-<body class="debug">
+<body class="debu">
     <header>
+        <!-- nav bar -->
         <nav class="nav-bar">
-
+            <!-- top-left links -->
             <div class="top-left">
                 <a href="">Donna </a>
                 <a href="">Uomo</a>
                 <a href="">Bambino</a>
             </div>
+            <!-- central logo -->
             <div>
                 <img class="logo" src="./assets/boolando_images/img/boolean-logo.png" alt="">
             </div>
+            <!-- Icons top right -->
             <div class="icon-top-right">
                 <i class="fa-solid fa-bag-shopping"></i>
                 <i class="fa-regular fa-heart"></i>
