Add class in the header
-top banner
-flex
-center items

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Boolando</title>
 </head>
 <body class="debu">
-    <header>
+    <header class="top-banner">
         <!-- nav bar -->
         <nav class="nav-bar">
             <!-- top-left links -->
@@ -23,9 +23,9 @@
             </div>
             <!-- Icons top right -->
             <div class="icon-top-right">
-                <i class="fa-solid fa-bag-shopping"></i>
-                <i class="fa-regular fa-heart"></i>
                 <i class="fa-regular fa-user"></i>
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-bag-shopping"></i>
             </div>
           
         </nav>
