--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
             </div>
         </section>
 
+        <footer>
+            <div>
+                <h4>Boolando s.r.l.</h4>
+                <ul>
+                    <li>Informazioni legali</li>
+                    <li>Informativa sulla privacy</li>
+                    <li>Diritti di recesso</li>
+                </ul>
+            </div>
+        </footer>
         
        
 
