--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 <!-- First Row of products -->
  <div class="row">
      <div class="card">
-         <div>
+         <div class="image-container">
              <img class="product-img" src="./assets/boolando_images/img/1.webp" alt="model-photo">
+             <img src="./assets/boolando_images/img/1b.webp" alt="model-photo2">
          </div>
          <div>
              <h4>Levi's</h4>
@@ -49,6 +50,7 @@
      <div class="card">
          <div>
              <img class="product-img" src="./assets/boolando_images/img/2.webp" alt="model-photo">
+             <img src="./assets/boolando_images/img/2b.webp" alt="model-photo2">
          </div>
          <div>
              <h4>Levi's</h4>
