--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <!-- First Row of products -->
  <div class="row">
      <div class="card">
-         <div class="image-container">
-             <img class="product-img" src="./assets/boolando_images/img/1.webp" alt="model-photo">
-             <img src="./assets/boolando_images/img/1b.webp" alt="model-photo2">
+         <div class="image-container ">
+             <img class="product-img image-top" src="./assets/boolando_images/img/1.webp" alt="model-photo">
+             <img class="product-img image-low" src="./assets/boolando_images/img/1b.webp" alt="model-photo2">
          </div>
          <div>
              <h4>Levi's</h4>
