add hover to second picture

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
      </div>
      
      <div class="card">
-         <div>
-             <img class="product-img" src="./assets/boolando_images/img/2.webp" alt="model-photo">
-             <img src="./assets/boolando_images/img/2b.webp" alt="model-photo2">
+         <div class="image-container">
+             <img class="product-img image-top" src="./assets/boolando_images/img/2.webp" alt="model-photo">
+             <img class="product-img image-low" src="./assets/boolando_images/img/2b.webp" alt="model-photo2">
          </div>
          <div>
              <h4>Levi's</h4>
