--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="card">
             <div class="image-container">
                 <img class="product-img image-top" src="./assets/boolando_images/img/6.webp" alt="model-photo">
-                <img class="product-img image-top" src="./assets/boolando_images/img/6b.webp" alt="model-photo">
+                <img class="product-img image-low" src="./assets/boolando_images/img/6b.webp" alt="model-photo">
             </div>
             <div>
                 <h4>Levi's</h4>
@@ -110,13 +110,24 @@
         </div>
 </div>
         <footer>
-            <div>
+
+            <div class="d-flex">
                 <h4>Boolando s.r.l.</h4>
-                <ul>
+                <ul class="d-flex">
                     <li>Informazioni legali</li>
                     <li>Informativa sulla privacy</li>
                     <li>Diritti di recesso</li>
                 </ul>
+            </div>
+
+
+            <div>
+                <h4>Trovaci anche su</h4>
+                <i class="fa-brands fa-square-facebook"></i>
+                <i class="fa-brands fa-square-instagram"></i>
+                <i></i>
+                <i></i>
+                <i></i>
             </div>
         </footer>
         
