--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
             <div>
                 <h4>Trovaci anche su</h4>
+                <i class="fa-brands fa-square-twitter"></i>
                 <i class="fa-brands fa-square-facebook"></i>
                 <i class="fa-brands fa-square-instagram"></i>
-                <i></i>
-                <i></i>
-                <i></i>
+                <i class="fa-brands fa-square-pinterest"></i>
+                <i class="fa-brands fa-square-youtube"></i>
             </div>
         </footer>
         
