add % tag for the photo

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
              <img class="product-img image-top" src="./assets/boolando_images/img/1.webp" alt="model-photo">
              <img class="product-img image-low" src="./assets/boolando_images/img/1b.webp" alt="model-photo2">
          </div>
+         <div class="discount-badge">-50%</div>
          <div>
              <h4>Levi's</h4>
              <h2>RELAXED FIT TEEN UNISEX</h2>
@@ -110,8 +111,7 @@
         </div>
 </div>
         <footer>
-
-            <div class="d-flex">
+            <div class="d-flex foot-color">
                 <h4>Boolando s.r.l.</h4>
                 <ul class="d-flex">
                     <li>Informazioni legali</li>
@@ -121,7 +121,7 @@
             </div>
 
 
-            <div>
+            <div class="foot-color">
                 <h4>Trovaci anche su</h4>
                 <i class="fa-brands fa-square-twitter"></i>
                 <i class="fa-brands fa-square-facebook"></i>
